Improved URI builder tests